decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
/* css for decidim_gdynia */

/************* header - main bar *************/

.main-bar__nav-item {
  border-left: none !important;
}

.main-bar__login-button {
  border-left: 2px solid rgb(225 229 239) !important;
}

/************* hero *************/

.hero__container {
  background-image: var(--hero-image);
}

h1.hero__title {
  @media only screen and (max-width: 1024px) {
    font-size: 32px !important;
    line-height: 1.25;
  }
}

/************* footer *************/

.main-footer {
  a,
  p,
  h2 {
    color: #ddd;
  }
}

.ue-footer {
  padding: 5px 0 15px 0;
  background-color: #fff;
  color: #1a181d;
}

.ue-footer img {
  width: 100%;
  max-width: 800px;
  display: block;
  margin: auto;
}

.ue-footer .ue-info-text {
  margin: auto;
  padding: 5px 10px 0px 10px;
  text-align: center;
  max-width: 600px;
  font-size: 0.9rem;
}

/************* user account *************/

.flash.warning .flash__message .author__verified {
  display: inline-block;
  vertical-align: text-bottom;
}

/************* register form *************/

.password-rules {
  display: none;
  background-color: #f2f2f2;
  padding: 24px 20px;
  margin-bottom: 1em;
  font-size: 14px;

  h6 {
    font-weight: bold;
    color: black;
    font-size: 14px;
  }

  ul {
    list-style-type: none;
    margin-left: 0;
    margin-bottom: 0;

    li {
      display: flex;
      align-items: center;
      margin-top: 6px;

      .password-rule-result {
        width: 14px;
        height: 14px;
        margin-right: 8px;
        position: relative;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;

        &::before {
          content: "";
          position: absolute;
          background-color: black;
          border-radius: 50%;
          width: 5px;
          height: 5px;
          left: 50%;
          top: 50%;
          transform: translate(-50%, -50%);
        }
      }

      &.password-rule-success .password-rule-result {
        &::before {
          content: unset;
        }
        background-image: url("images/decidim/gdynia/check-colored.svg");
      }

      &.password-rule-error .password-rule-result {
        &::before {
          content: unset;
        }
        background-image: url("images/decidim/gdynia/error-colored.svg");
      }
    }
  }
}


/************* general components *************/

.button__secondary {
  background-color: #f4bf55 !important;
}

/* Show password rules only on the registration form */
#register-form .password-rules {
  display: block;
}

/************* ADMIN *************/

/************* autocomplete sticky selection fix *************/

.autoComplete_wrapper {
  span.autocomplete__selected-item.sticky {
    align-items: center;
    padding: 0 2rem 0 0.5rem !important;
    height: 40px;
    line-height: 40px !important;
    top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: calc(100% - 2rem);
  }

  .clear-sticky-selection {
    align-items: center;
    justify-content: center;
    height: 40px;
    top: 0;
    line-height: 40px !important;
    right: 0.5rem;
    z-index: 1;
  }
}

